--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
+        <canvas id="target"></canvas>
+
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="asi.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("asi.core");</script>
